--- a/lecture1/homework/lecture1_hw.ipynb
+++ b/lecture1/homework/lecture1_hw.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "25f4eeb6",
+   "metadata": {},
+   "source": [
+    "## Домашнее задание: \"Введение, основы нейронных сетей\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e3ec4c1",
+   "metadata": {},
+   "source": [
+    "ФИО: Фадеев Роман Андреевич"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8cc148dc-d83d-4c32-bbb0-3ffd82ba4e98",
@@ -381,12 +397,10 @@
     "        self.loss_history = []\n",
     "\n",
     "    def _initialize_weights(self, input_size, output_size):\n",
-    "        # Размеры всех слоев (входной, скрытые, выходной)\n",
     "        layer_sizes = [input_size] + list(self.hidden_layer_sizes) + [output_size]\n",
     "\n",
-    "        # Инициализация весов и смещений для каждого слоя\n",
     "        for i in range(len(layer_sizes) - 1):\n",
-    "            W = np.random.randn(layer_sizes[i], layer_sizes[i + 1]) * np.sqrt(2 / layer_sizes[i])  # Используем He инициализацию\n",
+    "            W = np.random.randn(layer_sizes[i], layer_sizes[i + 1]) * np.sqrt(2 / layer_sizes[i])\n",
     "            b = np.zeros((1, layer_sizes[i + 1]))\n",
     "            self.weights.append(W)\n",
     "            self.biases.append(b)\n",
@@ -398,7 +412,6 @@
     "        return Z > 0\n",
     "\n",
     "    def _forward(self, X):\n",
-    "        # Прямой проход\n",
     "        activations = [X]\n",
     "        Zs = []\n",
     "        for i in range(len(self.weights) - 1):\n",
@@ -407,21 +420,18 @@
     "            A = self._relu(Z)  # ReLU активация\n",
     "            activations.append(A)\n",
     "        \n",
-    "        # Линейная активация на выходе\n",
     "        Z = activations[-1] @ self.weights[-1] + self.biases[-1]\n",
     "        Zs.append(Z)\n",
-    "        activations.append(Z)  # Для линейной регрессии активация на выходе не используется\n",
+    "        activations.append(Z)\n",
     "\n",
     "        return activations, Zs\n",
     "\n",
     "    def _compute_loss(self, y_pred, y):\n",
-    "        # Среднеквадратичная ошибка\n",
     "        return np.mean((y_pred - y) ** 2)\n",
     "\n",
     "    def _backward(self, X, y, activations, Zs):\n",
-    "        # Обратное распространение ошибки\n",
     "        m = X.shape[0]\n",
-    "        dA = activations[-1] - y  # Производная MSE по предсказанию\n",
+    "        dA = activations[-1] - y\n",
     "        grads_w = []\n",
     "        grads_b = []\n",
     "\n",
@@ -435,7 +445,6 @@
     "            if i > 0:\n",
     "                dA = dZ @ self.weights[i].T * self._relu_derivative(Zs[i - 1])\n",
     "        \n",
-    "        # Переворачиваем градиенты, чтобы соответствовать слоям\n",
     "        grads_w.reverse()\n",
     "        grads_b.reverse()\n",
     "\n",
@@ -448,28 +457,22 @@
     "        self._initialize_weights(input_size, output_size)\n",
     "\n",
     "        for epoch in range(self.max_iter):\n",
-    "            # Прямой проход\n",
     "            activations, Zs = self._forward(X)\n",
     "            y_pred = activations[-1]\n",
     "\n",
-    "            # Вычисление ошибки\n",
     "            loss = self._compute_loss(y_pred, y)\n",
     "            self.loss_history.append(loss)\n",
     "\n",
-    "            # Обратное распространение\n",
     "            grads_w, grads_b = self._backward(X, y, activations, Zs)\n",
     "\n",
-    "            # Обновление весов\n",
     "            for i in range(len(self.weights)):\n",
     "                self.weights[i] -= self.learning_rate * grads_w[i]\n",
     "                self.biases[i] -= self.learning_rate * grads_b[i]\n",
     "\n",
-    "            # Печать прогресса\n",
     "            if (epoch + 1) % 100 == 0:\n",
     "                print(f'Epoch {epoch + 1}/{self.max_iter}, Loss: {loss}')\n",
     "\n",
     "    def predict(self, X):\n",
-    "        # Прогнозирование\n",
     "        activations, _ = self._forward(X)\n",
     "        return activations[-1]"
    ]
@@ -606,6 +609,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27b7acfa",
+   "metadata": {},
+   "source": [
+    "# Сравним результаты"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "id": "25fd534f",
@@ -629,6 +640,24 @@
     "plt.hist(y_test.reshape(1, -1)[0], bins=100, label='GT')\n",
     "plt.legend()\n",
     "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ff60ab3",
+   "metadata": {},
+   "source": [
+    "## Выводы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd1edf72",
+   "metadata": {},
+   "source": [
+    "- Реализован MLP;\n",
+    "- На тестовой выборке получен хороший R2 score: 0.9749995810572604;\n",
+    "- Предсказания MLP куда лучше аппроксимируют таргетную функцию, чем LinearRegression."
    ]
   }
  ],
